--- a/examples/template.html
+++ b/examples/template.html
@@ -45,6 +45,10 @@
   </script>
 </head>
 <body>
+<body style="width: 80%; margin: auto; margin-top: 20px;">
+<h2 style="text-align: center;">Summernote Plugins - Template</h2>
+<h3 style="text-align: center;"><a href="https://github.com/Nanakii/summernote-plugins" target="_blank">View on Github</a></h3>
+<br />
 <textarea class="summernote">(Try inserting a new template)</textarea>
 </body>
 </html>
