option 'list' is now an object with : key (html file name) => value (label)
+ correct indentation

--- a/examples/template.html
+++ b/examples/template.html
@@ -36,9 +36,9 @@
   		  ],
         template: {
           path: 'tpls',
-          list: [
-            'label-success'
-          ]
+          list: {
+            'label-success': 'Success Label'
+          }
         }
       });
     });
